--- a/src/index.css
+++ b/src/index.css
@@ -117,9 +117,11 @@ input{
 {
   position:absolute !important;
 }
-.MuiDataGrid-main >div:first-child{
+.MuiDataGrid-main >div[style="position: absolute; pointer-events: none; color: rgba(130, 130, 130, 0.62); z-index: 100000; width: 100%; text-align: center; bottom: 50%; right: 0px; letter-spacing: 5px; font-size: 24px;"]{
   display: none;
 }
+
+
 
 .example::-webkit-scrollbar {
   display: none;
